# ecc

./: .bazel_downloader_config  .bazelignore  .bazelrc  .gitignore  .gitmodules  AGENTS.md  BUILD.bazel  CLAUDE.md  CMakeLists.txt  Dockerfile  MODULE.bazel  README.cn.md  README.md  build.sh  build_gui.sh  chipcompiler.spec  conftest.py  ecc.spec  flake.nix  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json  post-setup.sh  setup.sh
.github/: cliff.toml  pack.sh
.github/actions/check-version/: action.yml
.github/workflows/: ci.yml  release.yml
bazel/: BUILD.bazel  download_and_extract.bzl  ecc_tools_repo.BUILD.bazel  ecc_tools_repo.bzl  icsprout55_pdk_repo.BUILD.bazel  oss_cad_suite.BUILD.bazel  pyinstaller.sh  root_defs.bzl  thirdparty_defs.bzl
bazel/scripts/: BUILD.bazel  autopatch-ecc-py.sh  build-api-server-bundle.sh  build-dreamplace-wheel.sh  build-ecc-py-artifacts.sh  build-runtime-bundle.sh  build-tauri-bundle.sh  build-wheel.sh  init-ics55-pdk.sh  install-dev.sh  install-dreamplace.sh  install-ecc-runtime.sh  prepare-dev.sh  versions.json
bazel/scripts/auto-patchelf/: BUILD.bazel
benchmark/: __init__.py  benchmark.py  get_parameters.py  ics55_benchmark.json  ics55_parameter.json  ics55_tapeout.json  parameters.py  sky130_parameter.json
chipcompiler/: BUILD.bazel  __init__.py
chipcompiler/analysis/: step.py
chipcompiler/cli/: main.py
chipcompiler/data/: __init__.py  checklist.py  home.py  parameter.py  pdk.py  step.py  workspace.py
chipcompiler/engine/: __init__.py  db.py  flow.py
chipcompiler/gui/: package.json  pnpm-lock.yaml  vite.config.ts
chipcompiler/gui/python/: eda_logic.py
chipcompiler/gui/src/: App.vue  main.ts
chipcompiler/gui/src-tauri/: Cargo.toml  tauri.conf.json
chipcompiler/gui/src-tauri/capabilities/: migrated.json
chipcompiler/gui/src-tauri/src/: main.rs
chipcompiler/gui/src/api/: flow.ts  index.ts  sse.ts  type.ts  workspace.ts
chipcompiler/gui/src/applications/editor/core/: Editor.ts
chipcompiler/gui/src/components/: AIChatPanel.vue  DrawingArea.vue  LeftSidebar.vue  MapsGallery.vue  MessageItem.vue  NewProjectWizard.vue  ThumbnailGallery.vue  TopBar.vue  WelcomePage.vue
chipcompiler/gui/src/composables/: useEDA.ts  useFlowRunner.ts  useFlowStages.ts  useHomeData.ts  useParameters.ts  useProject.ts  useWorkspace.ts
chipcompiler/gui/src/router/: index.ts
chipcompiler/gui/src/stores/: messageStore.ts
chipcompiler/gui/src/styles/: index.css
chipcompiler/gui/src/types/: index.ts
chipcompiler/gui/src/views/: EditorView.vue  HomeView.vue  WelcomeView.vue  WorkspaceView.vue
chipcompiler/rtl2gds/: __init__.py  builder.py
chipcompiler/server/: __init__.py  api-server.spec  main.py  run_server.py
chipcompiler/server/routers/: __init__.py  ecc.py
chipcompiler/server/schemas/: __init__.py  ecc.py  info.py
chipcompiler/server/services/: ecc.py
chipcompiler/server/sse/: __init__.py  notify_service.py
chipcompiler/services/: __init__.py  main.py  run_server.py
chipcompiler/services/routers/: __init__.py  ecc.py  project.py  sse.py
chipcompiler/services/schemas/: __init__.py  ecc.py  info.py  project.py
chipcompiler/services/services/: __init__.py  ecc.py  info.py  project_service.py
chipcompiler/services/sse/: __init__.py  manager.py  models.py  notify_service.py
chipcompiler/tools/: __init__.py  eda.py
chipcompiler/tools/ecc/: __init__.py  builder.py  checklist.py  metrics.py  module.py  plot.py  runner.py  service.py  subflow.py  utility.py
chipcompiler/tools/ecc-dreamplace/: builder.py  module.py  run_dreamplace.py  runner.py
chipcompiler/tools/ecc/configs/: fp_default_config.json
chipcompiler/tools/ecc_dreamplace/: __init__.py  builder.py  module.py  run_dreamplace.py  runner.py  service.py  utility.py
chipcompiler/tools/ecc_dreamplace/configs/: dreamplace.json
chipcompiler/tools/iEDA/: __init__.py  builder.py  engine.py  metrics.py  module.py  plot.py  runner.py  utility.py
chipcompiler/tools/iEDA/configs/: flow_config.json  rt_default_config.json
chipcompiler/tools/klayout/: __init__.py  builder.py  module.py  runner.py  utility.py
chipcompiler/tools/magic/scripts/: drc.tcl  gds.tcl  lef.tcl
chipcompiler/tools/yosys/: __init__.py  builder.py  checklist.py  metrics.py  runner.py  service.py  subflow.py  utility.py
chipcompiler/tools/yosys/scripts/: init_tech.tcl  yosys.tcl  yosys_synthesis.tcl
chipcompiler/utility/: __init__.py  csv.py  file.py  filelist.py  json.py  log.py  plot.py  util.py
chipcompiler/workspaces/: __init__.py
docs/: api-guide.md  architecture.md  development.md  index.md  user-guide.md
docs/examples/gcd/: README.cn.md  README.md  filelist.f  ics55flow.py  ics55flow_with_filelist.py
gui/: README.md  package.json
gui/src-tauri/: BUILD.bazel
gui/src/components/: DrawingToolbar.vue  LeftSidebar.vue  MessageItem.vue  NewProjectWizard.vue  RightSidebar.vue  ThumbnailGallery.vue
gui/src/composables/: useFlowRunner.ts  useFlowStages.ts  useHomeData.ts  useParameters.ts  usePdkManager.ts  useSubflow.ts  useTauri.ts  useWorkspace.ts
gui/src/router/: index.ts
gui/src/stores/: messageStore.ts
nix/: chipcompiler.nix  ecos-studio.nix  overlay.nix
nix/chipcompiler/: default.nix
nix/ecc-tools/: default.nix  ecc-tools.nix  rustpkgs.nix
nix/ecos-studio/: default.nix
nix/modules/: devShells.nix
scripts/: BUILD.bazel  autopatch-ecc-py.sh  build-tauri-bundle.sh  build.sh  build_api_server.sh  build_release.sh  common.sh
scripts/auto-patchelf/: COPYING
test/: ics55_benchmark.json  nohup.out  parameters.py  pdk.py  test_benchmark_inputs.py  test_data_pdk.py  test_design_parameters.py  test_filelist.py  test_harden.py  test_ics55_batch.py  test_manifest_resolution.py  test_rtl_list_api.py  test_service.py  test_tools.py  test_tools_ieda.py  test_tools_yosys.py  test_tools_yosys_runner.py  test_tools_yosys_utility.py
test/fixtures/benchmark/: test_all_inputs.json  (+5 more)
test/formal/: README.md  __init__.py  test_file_chaining.py  test_param_merge.py  test_param_propagation.py  test_state_machine.py
(+3 files in other folders)
