load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@ecos_bazel_rules//rules:python_packaging.bzl", "python_pyinstaller_bundle")

package(default_visibility = ["//visibility:public"])

exports_files([
    "requirements_lock.txt",
    "ecc.spec",
])

pip_compile(
    name = "requirements_lock",
    extra_args = [
        "--group",
        "dev",
    ],
    requirements_in = "pyproject.toml",
    requirements_txt = "requirements_lock.txt",
)

python_pyinstaller_bundle(
    name = "api_server_bundle",
    spec_file = "ecc.spec",
    srcs = [
        "README.md",
        "pyproject.toml",
        "uv.lock",
        "requirements_lock.txt",
        "//chipcompiler:chipcompiler_python_sources",
        "//chipcompiler:chipcompiler_runtime_data",
    ],
    runtime_bundle = "//chipcompiler/thirdparty:runtime_bundle",
    output_name = "chipcompiler",
    pyinstaller = "//bazel:pyinstaller",
)

# Tauri bundle - ChipCompiler specific
genrule(
    name = "tauri_bundle",
    srcs = glob([
        "gui/src/**/*",
        "gui/public/**/*",
        "gui/index.html",
        "gui/package.json",
        "gui/pnpm-lock.yaml",
        "gui/tsconfig*.json",
        "gui/vite.config.ts",
        "gui/tailwind.config.ts",
    ]) + [
        "//gui/src-tauri:tauri_rust_sources",
        ":api_server_bundle",
        "@appimagetool_x86_64_linux//file",
        "@oss_cad_suite//:all_files",
        "@oss_cad_suite//:yosys_bin",
        "//bazel/scripts:build_tauri_bundle_script",
    ],
    outs = ["tauri_bundle/tauri_bundle.tar"],
    cmd = """
        set -euo pipefail

        bash "$(location //bazel/scripts:build_tauri_bundle_script)" \\
            --gui-src-dir "$$(dirname $(location gui/package.json))" \\
            --api-server-bin "$(location :api_server_bundle)" \\
            --appimagetool-bin "$(location @appimagetool_x86_64_linux//file)" \\
            --oss-cad-bin "$(location @oss_cad_suite//:yosys_bin)" \\
            --out-tar "$@" \\
            --work-root "$(@D)/tauri_bundle_work"
    """,
)

filegroup(
    name = "release_bundle",
    srcs = [":tauri_bundle"],
)
