load("@ecos-bazel//rules:python_packaging.bzl", "python_pyinstaller_bundle")

package(default_visibility = ["//visibility:public"])

exports_files([
    "ecc.spec",
])

python_pyinstaller_bundle(
    name = "server_bundle",
    spec_file = "ecc.spec",
    srcs = [
        "README.md",
        "pyproject.toml",
        "uv.lock",
        "//chipcompiler:chipcompiler_python_sources",
        "//chipcompiler:chipcompiler_runtime_data",
    ],
    runtime_bundle = "//chipcompiler/thirdparty:ecc_bundle",
    output_name = "chipcompiler",
    pyinstaller = "//bazel:pyinstaller",
)


alias(
    name = "prepare_dev",
    actual = "//bazel/scripts:prepare_dev",
)

genrule(
    name = "raw_wheel",
    srcs = [
        "pyproject.toml",
        "README.md",
        "//chipcompiler:chipcompiler_python_sources",
        "//chipcompiler:chipcompiler_runtime_data",
    ],
    outs = ["raw_wheel/ecc-0.1.0-py3-none-any.whl"],
    tools = ["@multitool//tools/uv"],
    cmd = """
        set -euo pipefail
        UV="$(execpath @multitool//tools/uv)"
        STAGE=$$(mktemp -d)
        trap 'rm -rf "$$STAGE"' EXIT
        for src in $(locations pyproject.toml) \
                   $(locations README.md) \
                   $(locations //chipcompiler:chipcompiler_python_sources) \
                   $(locations //chipcompiler:chipcompiler_runtime_data); do
            mkdir -p "$$STAGE/$$(dirname "$$src")"
            cp "$$src" "$$STAGE/$$src"
        done
        "$$UV" build --wheel --directory "$$STAGE" --out-dir "$$STAGE/_dist" --cache-dir "$$STAGE/.uv-cache"
        cp "$$STAGE"/_dist/*.whl "$@"
    """,
)

alias(
    name = "build_wheel",
    actual = "//bazel/scripts:build_wheel",
)
