module(
    name = "ecc",
    version = "0.0.0",
)

# Phase 2 / Task 1 bootstrap module.
# External Bazel deps will be added incrementally with concrete BUILD targets.

# Phase 2 / Task 2: enable Python rules for first BUILD.bazel migration batch.
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_uv", version = "0.87.0")

# Phase 3 / T1: required for C/C++ toolchains and foreign CMake-based rules.
bazel_dep(name = "rules_cc", version = "0.2.14")
# NOTE: 0.12.0 fails to load under Bazel 9 (rule() arg mismatch in upstream module extensions).
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")

uv = use_extension("@rules_uv//uv:extensions.bzl", "uv")
uv.toolchain(
    name = "uv",
    uv_version = "0.8.17",
)
use_repo(uv, "uv")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")
