module(
    name = "ecc",
    version = "0.0.0",
)

# Phase 2 / Task 1 bootstrap module.
# External Bazel deps will be added incrementally with concrete BUILD targets.

# Phase 2 / Task 2: enable Python rules for first BUILD.bazel migration batch.
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_uv", version = "0.87.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# Phase 3 / T1: required for C/C++ toolchains and foreign CMake-based rules.
bazel_dep(name = "rules_cc", version = "0.2.14")

# NOTE: 0.12.0 fails to load under Bazel 9 (rule() arg mismatch in upstream module extensions).
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")

uv = use_extension("@rules_uv//uv:extensions.bzl", "uv")
uv.toolchain(
    name = "uv",
    uv_version = "0.8.17",
)
use_repo(uv, "uv")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
pip.parse(
    hub_name = "pypi_autopatchelf",
    python_version = "3.11",
    requirements_lock = "//bazel/scripts/auto-patchelf:requirements.txt",
)
use_repo(pip, "pypi", "pypi_autopatchelf")

# Bazel-native, reproducible appimagetool for Linux AppImage post-processing.
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_file(
    name = "appimagetool_x86_64_linux",
    urls = ["https://ghfast.top/https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage"],
    sha256 = "b90f4a8b18967545fda78a445b27680a1642f1ef9488ced28b65398f2be7add2",
    executable = True,
)

# Bazel-native, reproducible ICS55 PDK repository.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "icsprout55_pdk",
    urls = ["https://ghfast.top/https://github.com/openecos-projects/icsprout55-pdk/archive/663488bd79bbbd6a78ee053f495dcaecdd15e3f9.tar.gz"],
    strip_prefix = "icsprout55-pdk-663488bd79bbbd6a78ee053f495dcaecdd15e3f9",
    sha256 = "87f31b0d931fbaa285583664ddcca8488f082771800e23c22feb99af33fe244c",
    build_file_content = """
    package(default_visibility = ["//visibility:public"])
    exports_files(["README.md"])
    filegroup(
        name = "all_files",
        srcs = glob(["**"]),
    )
    """,
)

# Bazel-native, reproducible patchelf binary for RPATH patching.
http_archive(
    name = "patchelf",
    urls = ["https://github.com/NixOS/patchelf/releases/download/0.18.0/patchelf-0.18.0-x86_64.tar.gz"],
    sha256 = "ce84f2447fb7a8679e58bc54a20dc2b01b37b5802e12c57eece772a6f14bf3f0",
    build_file_content = """exports_files(["bin/patchelf"])""",
)

# ECC-Tools source tree, imported without BUILD/WORKSPACE files so cmake() glob works.
# (src/third_party contains abseil-cpp/yaml-cpp with their own BUILD files that
# create package boundaries and block glob traversal.)
ecc_tools_sources = use_repo_rule("//bazel:ecc_tools_repo.bzl", "ecc_tools_sources")
ecc_tools_sources(
    name = "ecc_tools_src",
    path = "chipcompiler/thirdparty/ecc-tools",
)

# Bazel-native, reproducible OSS CAD Suite (Linux x64) archive.
http_archive(
    name = "oss_cad_suite",
    urls = ["https://ghfast.top/https://github.com/YosysHQ/oss-cad-suite-build/releases/download/2026-01-22/oss-cad-suite-linux-x64-20260122.tgz"],
    sha256 = "b536961118dd7497707752d9fd45714c5f6dacd150e02387bac4f75c28a16567",
    build_file = "//bazel:oss_cad_suite.BUILD.bazel",
)
