module(
    name = "ecc",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_uv", version = "0.87.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_cc", version = "0.2.14")

# NOTE: 0.12.0 fails to load under Bazel 9 (rule() arg mismatch in upstream module extensions).
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

bazel_dep(name = "ecos-bazel")
local_path_override(
    module_name = "ecos-bazel",
    path = "ecos-bazel",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")

uv_export = use_repo_rule("@ecos-bazel//rules:uv_export.bzl", "uv_export")
uv_export(
    name = "uv_requirements",
    uv_lock = "//:uv.lock",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "@uv_requirements//:requirements_lock.txt",
)
use_repo(pip, "pypi")

# Reproducible appimagetool for Linux AppImage post-processing.
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_file(
    name = "appimagetool_x86_64_linux",
    urls = ["https://ghfast.top/https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage"],
    sha256 = "b90f4a8b18967545fda78a445b27680a1642f1ef9488ced28b65398f2be7add2",
    executable = True,
)

download_and_extract = use_repo_rule("@ecos-bazel//rules:download_and_extract.bzl", "download_and_extract")
local_source_repo = use_repo_rule("@ecos-bazel//rules:local_source_repo.bzl", "local_source_repo")

download_and_extract(
    name = "icsprout55_pdk",
    urls = ["https://ghfast.top/https://github.com/openecos-projects/icsprout55-pdk/archive/663488bd79bbbd6a78ee053f495dcaecdd15e3f9.tar.gz"],
    strip_prefix = "icsprout55-pdk-663488bd79bbbd6a78ee053f495dcaecdd15e3f9",
    sha256 = "6e96c565b83eb227d7adf24941404a18c75bda179054b3de5b491f6d9b748dc9",
    post_setup_cmds = ["make unzip"],
    environment = {"TOOL": "curl"},
    build_file_template = "@ecos-bazel//rules:pdk_repo.BUILD.bazel",
)

download_and_extract(
    name = "patchelf",
    urls = ["https://github.com/NixOS/patchelf/releases/download/0.18.0/patchelf-0.18.0-x86_64.tar.gz"],
    sha256 = "ce84f2447fb7a8679e58bc54a20dc2b01b37b5802e12c57eece772a6f14bf3f0",
    build_file_content = """exports_files(["bin/patchelf"])""",
)

download_and_extract(
    name = "oss_cad_suite",
    urls = ["https://ghfast.top/https://github.com/YosysHQ/oss-cad-suite-build/releases/download/2026-01-22/oss-cad-suite-linux-x64-20260122.tgz"],
    sha256 = "b536961118dd7497707752d9fd45714c5f6dacd150e02387bac4f75c28a16567",
    build_file_template = "@ecos-bazel//rules:oss_cad_suite.BUILD.bazel",
)

# ECC-Tools source tree, imported without BUILD/WORKSPACE files so cmake() glob works.
# (src/third_party contains abseil-cpp/yaml-cpp with their own BUILD files that
# create package boundaries and block glob traversal.)
local_source_repo(
    name = "ecc_tools_src",
    path = "chipcompiler/thirdparty/ecc-tools",
)
