load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@pypi//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

exports_files([
    "oss_cad_suite.BUILD.bazel",
    "patcher.py",
    "root_defs.bzl",
    "thirdparty_defs.bzl",
    "ecc_tools_repo.BUILD.bazel",
    "icsprout55_pdk_repo.BUILD.bazel",
])

sh_binary(
    name = "pyinstaller",
    srcs = ["pyinstaller.sh"],
    data = [
        "@python_3_11//:python",
        requirement("pyinstaller"),
    ],
    env = {
        "PYTHON_INTERPRETER": "$(location @python_3_11//:python)",
    },
)
