package(default_visibility = ["//visibility:public"])

exports_files([
    "autopatch-ecc-py.sh",
    "build-tauri-bundle.sh",
])

filegroup(
    name = "autopatch_ecc_py_script",
    srcs = ["autopatch-ecc-py.sh"],
)

filegroup(
    name = "build_tauri_bundle_script",
    srcs = ["build-tauri-bundle.sh"],
)

filegroup(
    name = "autopatch_ecc_py",
    # Why: expose the script as a stable Bazel target for genrule task inputs,
    # making runtime bundling dependencies explicit and cache-friendly.
    srcs = [
        "autopatch-ecc-py.sh",
        "auto-patchelf/auto-patchelf",
        "auto-patchelf/autopatchelf.py",
    ],
)
