package(default_visibility = ["//visibility:public"])

exports_files([
    "build.sh",
    "common.sh",
])

alias(
    name = "autopatch_ecc_py_script",
    actual = "//bazel/scripts:autopatch_ecc_py_script",
)

alias(
    name = "build_tauri_bundle_script",
    actual = "//bazel/scripts:build_tauri_bundle_script",
)

alias(
    name = "api_server_bundle_script",
    actual = "//bazel/scripts:api_server_bundle_script",
)

alias(
    name = "ecc_py_build_artifacts_script",
    actual = "//bazel/scripts:ecc_py_build_artifacts_script",
)

alias(
    name = "runtime_bundle_script",
    actual = "//bazel/scripts:runtime_bundle_script",
)

alias(
    name = "autopatch_ecc_py",
    actual = "//bazel/scripts:autopatch_ecc_py",
)

alias(
    name = "init_ics55_pdk",
    actual = "//bazel/scripts:init_ics55_pdk",
)
