load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

exports_files([
    "build-tauri-bundle.sh",
])

filegroup(
    name = "build_tauri_bundle_script",
    srcs = ["build-tauri-bundle.sh"],
)

sh_binary(
    name = "prepare_dev",
    srcs = ["prepare-dev.sh"],
)

sh_binary(
    name = "install_dev",
    srcs = ["install-dev.sh"],
    data = [
        "//chipcompiler/thirdparty:ecc_bundle",
    ],
    args = [
        "$(rlocationpath //chipcompiler/thirdparty:ecc_bundle)",
    ],
)

sh_binary(
    name = "build_wheel",
    srcs = ["build-wheel.sh"],
    data = [
        "//chipcompiler/thirdparty:ecc_bundle",
    ],
    args = [
        "$(rlocationpath //chipcompiler/thirdparty:ecc_bundle)",
    ],
)
