load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

exports_files([
    "build-tauri-bundle.sh",
])

filegroup(
    name = "build_tauri_bundle_script",
    srcs = ["build-tauri-bundle.sh"],
)

sh_binary(
    name = "prepare_dev",
    srcs = ["prepare-dev.sh"],
)

genrule(
    name = "install_dev_script",
    outs = ["install-dev.gen.sh"],
    cmd = """\
        cat > $@ <<'SCRIPT'
        #!/usr/bin/env bash
        set -euo pipefail
        WS="$${BUILD_WORKSPACE_DIRECTORY:?Must run via: bazel run //bazel/scripts:install_dev}"
        RF="$${RUNFILES_DIR:-$${BASH_SOURCE[0]}.runfiles}"
        tar -xf "$$RF/$$1" -C "$$WS" --keep-directory-symlink
        echo "Installed ECC runtime -> chipcompiler/tools/ecc/bin/"
        SCRIPT
    """,
)

sh_binary(
    name = "install_dev",
    srcs = [":install_dev_script"],
    data = [
        "//chipcompiler/thirdparty:ecc_bundle",
    ],
    args = [
        "$(rlocationpath //chipcompiler/thirdparty:ecc_bundle)",
    ],
)

sh_binary(
    name = "build_wheel",
    srcs = ["build-wheel.sh"],
    data = [
        "//:raw_wheel",
        "@python_3_11//:python3",
    ],
    args = [
        "$(rlocationpath //:raw_wheel)",
    ],
)
