load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "tauri_rust_sources",
    # Why: root tauri_bundle genrule cannot glob into this subpackage directly.
    # Export source/config inputs so cache keys include Rust-side changes.
    srcs = glob([
        "src/**/*",
        "capabilities/**/*",
        "icons/**/*",
        "Cargo.toml",
        "Cargo.lock",
        "tauri.conf.json",
        "build.rs",
    ]),
)

py_binary(
    name = "external_api_bin",
    srcs = ["external_api_bin_runner.py"],
    main = "external_api_bin_runner.py",
    data = ["//chipcompiler:api_server_onefile"],
)

py_binary(
    name = "bundle_nonlinux",
    srcs = ["bundle_nonlinux_runner.py"],
    main = "bundle_nonlinux_runner.py",
    data = [":external_api_bin"],
)

py_binary(
    name = "bundle_linux_deb",
    srcs = ["bundle_linux_deb_runner.py"],
    main = "bundle_linux_deb_runner.py",
    data = [":external_api_bin"],
)

py_binary(
    name = "bundle_linux_appimage",
    srcs = ["bundle_linux_appimage_runner.py"],
    main = "bundle_linux_appimage_runner.py",
    data = [":external_api_bin"],
)
